--- a/CSS/media.css
+++ b/CSS/media.css
@@ -64,14 +64,6 @@
         justify-content: center;
     }
 
-
-
-
-
-
-
-
-
     .contact-container {
         flex-direction: column;
         align-items: center;
@@ -92,3 +84,216 @@
         transition: none
     }
 }
+
+
+
+@media screen and (max-width:320px){
+
+    .introduction h1{
+        font-size: 18px;
+        text-align: center;
+    }
+    
+
+    .card h2 , .introduction p {
+        font-size: 15px;
+        text-align: center;
+
+    }
+    .card{
+        margin-top: 15px;
+    }
+
+    .card p {
+        font-size: 18px;
+    }
+    .card img {
+        max-width: 100%;
+    }
+     
+    .heading h1{
+        font-size:30px;
+        margin-top: 30px;
+        text-align: center;
+    
+    }
+    .heading p{
+        font-size:13px;
+        text-align: center;
+    }
+    .subdetails h2{
+        font-size:20px;
+        text-align: center;
+    }
+    .subdetails p{
+        font-size:18px;
+    }
+    form input , form textarea{
+        width:100%;
+    }
+    form .button{
+        font-size: 13px;
+
+        width: 80px;
+        
+        text-align: center;
+        border-radius: 15px;
+        align-items: center;
+        margin-left: 80px;
+    }
+
+}
+
+@media screen and (max-width:375px){
+
+        .introduction h1{
+        font-size: 20px;
+        text-align: center;
+    }
+    
+
+    .card h2 , .introduction p {
+        font-size: 18px;
+        text-align: center;
+
+    }
+    .card{
+        margin-top: 15px;
+    }
+
+    .card p {
+        font-size: 20px;
+    }
+    .card img {
+        padding-right: 35px;
+
+        
+
+    }
+ .heading h1{
+        font-size:30px;
+        margin-top: 30px;
+        text-align: center;
+    
+    }
+    .heading p{
+        font-size:13px;
+        text-align: center;
+    }
+    .subdetails h2{
+        font-size:20px;
+        text-align: center;
+    }
+    .subdetails p{
+        font-size:18px;
+    }
+    form input , form textarea{
+        width:100%;
+    }
+    form .button{
+        font-size: 13px;
+
+        width: 80px;
+        
+        text-align: center;
+        border-radius: 15px;
+        align-items: center;
+        margin-left: 120px;
+    }
+}
+@media screen and (max-width:425px){
+
+    .card img {
+        padding-left: 35px;
+        padding-top: 10px;
+        
+
+    }
+}
+
+@media screen and (max-width:768px){
+    .card a img {
+    width:335px !important;;
+    height: 300px;
+
+    }
+    .card{
+        margin-top: 15px;
+    }
+    .heading h1{
+        font-size:30px;
+        margin-top: 30px;
+        text-align: center;
+    
+    }
+    .heading p{
+        font-size:13px;
+        text-align: center;
+    }
+    .subdetails h2{
+        font-size:20px;
+        text-align: center;
+    }
+    .subdetails p{
+        font-size:18px;
+    }
+    form input , form textarea{
+        width:100%;
+    }
+    form .button{
+        font-size: 13px;
+
+        width: 80px;
+        
+        text-align: center;
+        border-radius: 15px;
+        align-items: center;
+        margin-left: 120px;
+    }
+}
+@media screen and (max-width:1024px){
+    .card a img {
+    width: 215px;
+    height:250px;
+
+     }
+    .card{
+        margin-top: 15px;
+    }
+    .heading h1{
+            font-size:30px;
+            margin-top: 30px;
+            text-align: center;
+        
+    }
+    .heading p{
+        font-size:13px;
+        text-align: center;
+    }
+    .subdetails h2{
+        font-size:20px;
+        text-align: center;
+    }
+    .subdetails p{
+        font-size:18px;
+    }
+    form input , form textarea{
+        width:100%;
+    }
+    form .button{
+        font-size: 13px;
+
+        width: 80px;
+        
+        text-align: center;
+        border-radius: 15px;
+        align-items: center;
+        margin-left: 120px;
+    }
+}
+@media screen and (max-width:1440px){
+    .card img {
+        width:100%;
+    }
+}
+
